c/examples/writing-a-c-compiler-tests/tests/chapter_1/invalid_lex/invalid_identifier_2.c
int main(void)
{
    return @b;
}